--- a/Nivel1-A/Documentos/Videos/clase6.tex
+++ b/Nivel1-A/Documentos/Videos/clase6.tex
@@ -10,7 +10,7 @@
 %\end{frame}
 %--- Next Frame ---%
 
-\subsection{Aplicaciones de la teledetección}
+\section{Aplicaciones de la teledetección}
 
 \begin{frame}{}
   \begin{figure}
