Actualizacion guia 6. Aclaracion objetivo

--- a/Nivel1-A/Documentos/Guia/guia6.tex
+++ b/Nivel1-A/Documentos/Guia/guia6.tex
@@ -1,5 +1,8 @@
 \chapter{Aplicaciones}
 
+Las siguientes aplicaciones corresponden a una guía integradora de actividades que fueron descriptas en las clases anteriores. Para resolverla repaselas herramientas de SNAP.
+Cualquier duda o consulta puede realizarla en el foro.
+
 \section{Deforestación en el noroeste argentino}
 
 El objetivo de esta aplicación es analizar la variación de la superficie cubierta por vegetación en los alrededores de la ciudad de Joaquin V. Gonzalez, Salta, Argentina, entre 1986 y 2017.
