--- a/Nivel2-A/Documentos/Guia/guia5.tex
+++ b/Nivel2-A/Documentos/Guia/guia5.tex
@@ -20,7 +20,7 @@ En esta aplicación se verá como detectar espejos de agua, utilizando imágenes
 
 \begin{que}
     Descargue la imagen del 7 de octubre del 2017
-    \begin{center}\path{ S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
+    \begin{center}\path{ S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{List} en lugar de la \emph{Geographic}.
 \end{que}
 
 \begin{que}
@@ -78,7 +78,7 @@ En esta aplicación se verá como detectar derramos de petroleo, utilizando imá
 
 \begin{que}
     Descargue la imagen del 11 de marzo del 2017
-    \begin{center}\path{ S1A_IW_GRDH_1SDV_20170311T021505_20170311T021528_015638_019B8B_9D85}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
+    \begin{center}\path{ S1A_IW_GRDH_1SDV_20170311T021505_20170311T021528_015638_019B8B_9D85}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{List} en lugar de la \emph{Geographic}.
 \end{que}
 
 \begin{que}
@@ -137,7 +137,7 @@ En esta aplicación se verá como detectar zonas deforestadas, utilizando imáge
     Descargue las imagenes del 22 y 24 de noviembre de los años 2014 y 2017.
     \begin{center}\path{ S1A_IW_GRDH_1SSV_20141122T224900_20141122T224925_003400_003F6A_A171}\end{center}
       \begin{center}\path{ S1B_IW_GRDH_1SDV_20171124T224831_20171124T224859_008429_00EEE9_992C}\end{center}
-      del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
+      del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{List} en lugar de la \emph{Geographic}.
 \end{que}
 
 \begin{que}
@@ -204,7 +204,7 @@ En esta aplicación se verá como detectar áreas urbanas, utilizando imágenes 
 \begin{que}
     Descargue la imagen del 5 de enero de 2018
     \begin{center}\path{S1B_IW_GRDH_1SDV_20180105T005129_20180105T005154_009029_010222_5BA1}\end{center}
-      del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
+      del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{List} en lugar de la \emph{Geographic}.
 \end{que}
 
 \begin{que}
@@ -256,7 +256,7 @@ En esta aplicación se verá como detectar áreas afectadas por incendios, utili
     \begin{center}\path{ S1A_IW_GRDH_1SDV_20170108T092431_20170108T092456_014738_017FDD_E8CA}\end{center}
     \begin{center}\path{ S1A_IW_GRDH_1SDV_20161227T092433_20161227T092458_014563_017A8D_133A}\end{center}
 
-      del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
+      del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{List} en lugar de la \emph{Geographic}.
 \end{que}
 
 \begin{que}
