--- a/Nivel2-A/Documentos/Guia/guia3.tex
+++ b/Nivel2-A/Documentos/Guia/guia3.tex
@@ -8,7 +8,7 @@ Para descargar imágenes SAR utilizaremos el catálogo del \href{https://vertex.
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.7\textwidth]{fig:region.png}
+    \includegraphics[width=0.9\textwidth]{fig:region.jpg}
     \caption{Selección de un área de interés en el catálogo \emph{Vertex} del \emph{Alaska Satellite Facility}}
     \label{fig:region}
 \end{figure}
@@ -17,7 +17,7 @@ Seleccione en \texttt{Dataset} el set de datos de \texttt{ALOS PALSAR} (Figura \
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.7\textwidth]{fig:dataset.png}
+    \includegraphics[width=0.9\textwidth]{fig:dataset.png}
     \caption{Selección de \emph{Dataset} en el catálogo \emph{Vertex} del \emph{Alaska Satellite Facility}}
     \label{fig:dataset}
 \end{figure}
@@ -28,7 +28,7 @@ Descarge el producto \emph{Level 1.1 Complex (661.42 MB)} (Figura \ref{fig:desca
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.7\textwidth]{fig:descarga.png}
+    \includegraphics[width=0.9\textwidth]{fig:resultados.png}
     \caption{Selección de producto para la descarga en el catálogo \emph{Vertex} del \emph{Alaska Satellite Facility}}
     \label{fig:descarga}
 \end{figure}
@@ -39,22 +39,22 @@ El producto descargado corresponde a una imagen \emph{Single look complex} en \e
 
 Abra la imagen \directory{ALPSRP278916070-L1.1.zip} en SNAP. Despliegue la banda \texttt{intensity\_HH} y observe que se encuentra comprimida horizontalmente.
 
-Para calibrar la imagen, diríjase a \menu{Radar>Radiometric>Calibrate} (Figura \ref{fig:calibrar}) y asigne una ruta de guardado.
+\begin{figure}[h!]
+    \centering
+    \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar1.png}}
+    \hspace{1cm}
+    \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar2.png}}
+    \caption{Calibración de productos SAR utilizando el SNAP. Recuerde seleccionar la ruta de guardado en \emph{Directory}.} % arreglar figura
+    \label{fig:calibrar}
+\end{figure}
 
- \begin{figure}[h!]
-     \centering
-     \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar1.png}}
-     \hspace{1cm}
-     \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar2.png}}
-     \caption{Calibración de productos SAR utilizando el SNAP. Recuerde seleccionar la ruta de guardado en \emph{Directory}.} % arreglar figura
-     \label{fig:calibrar}
- \end{figure}
+Para calibrar la imagen, diríjase a \menu{Radar>Radiometric>Calibrate} (Figura \ref{fig:calibrar}) y asigne una ruta de guardado.
 
  Obtendrá una imagen con los coeficientes de backscatter \texttt{sigma\_0}. En este caso tendrá las bandas correspondientes a las 4 formas de interacción entre el blanco y la radiación (HH, HV, VH y VV). Este tema será desarrollado en la próxima clase.
 
  \section{Filtrado}
 
- Para disminuir el ruido speckle en la imagen utilizaremos el proceso de multilook. El multilooking genera una nueva imagen a partir de los píxeles en una ventana. Para realizarlo utilice la herramienta \menu{Radar>Multilooking}.
+ Para disminuir el ruido speckle en la imagen utilizaremos el proceso de multilook. El multilooking genera una nueva imagen a partir de los píxeles en una ventana. Para realizarlo utilice la herramienta \menu{Radar>SAR Utilities>Multilooking}.
 
  En \texttt{source} seleccione la imagen
  \begin{center} \texttt{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal} \end{center}
@@ -82,6 +82,15 @@ Finalmente, es común proyectar la imagen del \emph{slant range} al \emph{ground
 Para proyectar la imagen sobre el elipsoide vaya al menú \menu{Radar>Geometric>Ellipsoid Correction>Average Height Range Doppler}. Seleccione la imagen
 \begin{center} \texttt{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal\_ML\_DSk} \end{center} y deje los parametros por defecto (Figura \ref{fig:elipsoide}).
 
+    \begin{figure}[h!]
+        \centering
+        \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:elipsoide1.png}}
+        \hspace{1cm}
+        \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:elipsoide2.png}}
+        \caption{Proyección de un producto SAR sobre el elipsoide.}
+        \label{fig:elipsoide}
+    \end{figure}
+
 \subsection{Modelo de elevación digital - GTC}
 
 Para proyectar la imagen sobre un modelo de elevación digital vaya al menú \menu{Radar>Geometric>Terrain Correction>Range Doppler Terrain Correction}. Seleccione la imagen
@@ -89,14 +98,7 @@ Para proyectar la imagen sobre un modelo de elevación digital vaya al menú \me
   \end{center}
   y en \menu{processing parameters} destilde la opción \emph{Mask out areas without elevation} (Figura \ref{fig:gtc}).
 
-  \begin{figure}[h!]
-      \centering
-      \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:elipsoide1.png}}
-      \hspace{1cm}
-      \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:elipsoide2.png}}
-      \caption{Proyección de un producto SAR sobre el elipsoide.}
-      \label{fig:elipsoide}
-  \end{figure}
+
 
 {\bf Importante:} Al realizar la proyección sobre un DEM el SNAP lo descarga automaticamente. Esto puede tomar varios minutos dependiendo de su conexión.
 
